// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TemplatesPage /> tests snapshot test in grid view 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/undefined/settings"
            >
              <span
                class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                icon="cog"
              >
                <svg
                  data-icon="cog"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cog
                  </desc>
                  <path
                    d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                common.accountSettings
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ng-tooltip-native"
      >
        <h2
          data-tooltip-id="templatesPageHeading"
        >
           
          common.templates
        </h2>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <div
        class="Layout--horizontal StyledProps--main PageSubHeader--container StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <span
            class="bp3-popover-wrapper main"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                  icon="plus"
                >
                  <svg
                    data-icon="plus"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      plus
                    </desc>
                    <path
                      d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  templatesLibrary.addNewTemplate
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <div
            class="bp3-popover-wrapper DropDown--main"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                  data-testid="dropdown-button"
                  style="min-width: 130px;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                      data-testid="dropdown-value"
                      style="--text-line-clamp: 1;"
                    >
                      all
                    </p>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                      data-icon="main-chevron-down"
                    >
                      <svg
                        height="8"
                        viewBox="0 0 14 8"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                          fill="#4d5969"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          style="align-items: center;"
        >
          <div
            class="bp3-input-group ui-search-box ExpandingSearchInput--main expandSearch  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
            data-name=""
            style="width: 200px; max-width: 200px;"
          >
            <span
              class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
              data-icon="thinner-search"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 16 16"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <input
              class="bp3-input  ExpandingSearchInput--filter"
              dir="auto"
              placeholder="search"
              style="padding-right: 38px;"
              type="search"
              value=""
            />
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              data-testid="grid-view"
              data-tooltip-id="grid-view"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-grid-view StyledProps--main"
                icon="grid-view"
              >
                <svg
                  data-icon="grid-view"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    grid-view
                  </desc>
                  <path
                    d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listUnselected GridListToggle--listButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
              data-testid="list-view"
              data-tooltip-id="list-view"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-list StyledProps--main"
                icon="list"
              >
                <svg
                  data-icon="list"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    list
                  </desc>
                  <path
                    d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
        style="overflow: auto; height: 100%;"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--margin-left-xlarge StyledProps--margin-right-xlarge"
          style="height: 100%;"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-bottom-large StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
              >
                total
                : 
                1
              </p>
              <div
                class="bp3-popover-wrapper DropDown--main"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
                      data-testid="dropdown-button"
                      style="width: 180px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                          data-icon="main-sort"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 18 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M17.125 11.415l-3.713 3.427a.618.618 0 01-.825 0l-3.712-3.427a.51.51 0 010-.761.618.618 0 01.825 0l2.717 2.508V1.538c0-.297.26-.538.583-.538.322 0 .583.241.583.538v11.624l2.717-2.508a.618.618 0 01.825 0 .51.51 0 010 .761zM.875 4.584l3.713-3.426a.618.618 0 01.824 0l3.713 3.426a.51.51 0 010 .762.618.618 0 01-.825 0L5.583 2.838v11.623c0 .298-.26.539-.583.539-.322 0-.583-.241-.583-.539V2.838L1.7 5.346a.618.618 0 01-.825 0 .51.51 0 010-.762z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                          data-testid="dropdown-value"
                          style="--text-line-clamp: 1;"
                        >
                          lastUpdatedSort
                        </p>
                      </div>
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                          data-icon="main-chevron-down"
                        >
                          <svg
                            height="8"
                            viewBox="0 0 14 8"
                            width="8"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                              fill="#4d5969"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
            style="flex-grow: 1;"
          >
            <div
              class="Layout--vertical StyledProps--main"
              style="height: 100%;"
            >
              <div
                class="StyledProps--font StyledProps--main gridLayout"
              >
                <div
                  class="StyledProps--font StyledProps--main uicore-masonry-layout--container0 StyledProps--padding-xxxlarge"
                  style="margin: 0px auto; width: 0px; height: 0px; position: relative;"
                >
                  <div
                    class="StyledProps--font StyledProps--main uicore-masonry-layout--item-0"
                    style="margin-bottom: 25px; position: absolute; left: 0px; top: 0px;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main container bordered"
                    >
                      <div
                        class="bp3-card bp3-elevation-0 Card--card templateCard"
                      >
                        <span
                          class="bp3-popover-wrapper main actionButton"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main actionButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                              type="button"
                            >
                              <span
                                class="bp3-icon bp3-icon-more StyledProps--main"
                                icon="more"
                              >
                                <svg
                                  data-icon="more"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <desc>
                                    more
                                  </desc>
                                  <path
                                    d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                        <div
                          class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-small StyledProps--flex"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="harness-with-color"
                            >
                              <svg
                                height="18"
                                viewBox="0 0 25 25"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
                            data-testid="manjutesttemplate"
                            style="--text-line-clamp: 1;"
                          >
                            manju-test-template-qq-12344
                          </p>
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400 StyledProps--margin-top-xsmall"
                            style="--text-line-clamp: 1;"
                          >
                            idLabel
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main container"
                        >
                          <div
                            class="StyledProps--font StyledProps--main"
                          >
                            <div
                              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main tagsContainer"
                            >
                              <span
                                class="Tag--main"
                              >
                                <span
                                  class="bp3-tag tag"
                                  style="max-width: 80px;"
                                >
                                  <span
                                    class="bp3-text-overflow-ellipsis bp3-fill"
                                  >
                                    QAR
                                  </span>
                                </span>
                              </span>
                              <span
                                class="Tag--main"
                              >
                                <span
                                  class="bp3-tag tag"
                                  style="max-width: 80px;"
                                >
                                  <span
                                    class="bp3-text-overflow-ellipsis bp3-fill"
                                  >
                                    Internal 1
                                  </span>
                                </span>
                              </span>
                              <span
                                class="Tag--main"
                              >
                                <span
                                  class="bp3-tag tag"
                                  style="max-width: 80px;"
                                >
                                  <span
                                    class="bp3-text-overflow-ellipsis bp3-fill"
                                  >
                                    Canary 1
                                  </span>
                                </span>
                              </span>
                              <span
                                class="Tag--main"
                              >
                                <span
                                  class="bp3-tag tag"
                                  style="max-width: 80px;"
                                >
                                  <span
                                    class="bp3-text-overflow-ellipsis bp3-fill"
                                  >
                                    BLUE
                                  </span>
                                </span>
                              </span>
                              <span
                                class="Tag--main"
                              >
                                <span
                                  class="bp3-tag tag"
                                  style="max-width: 80px;"
                                >
                                  <span
                                    class="bp3-text-overflow-ellipsis bp3-fill"
                                  >
                                    Tag A
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main StyledProps--background-grey100"
                          style="height: 1px;"
                        />
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag version"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                v4
                              </span>
                            </span>
                          </span>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                          >
                            <p
                              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--color StyledProps--color-grey800"
                            >
                              lastUpdated
                            </p>
                            <span
                              class="bp3-popover-wrapper bp3-dark"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <span
                                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-xsmall StyledProps--color StyledProps--color-grey800"
                                  tabindex="0"
                                >
                                  dummy date
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--padding-top-medium"
                        >
                          <div
                            class="templateColor"
                          >
                            <div
                              class="absolutePos"
                            >
                              <svg
                                fill="none"
                                height="18"
                                viewBox="0 0 121 18"
                                width="121"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M10.6577 4.36758L0.989019 17.5H120.044L111.076 4.58226C109.301 2.02513 106.385 0.5 103.272 0.5H18.3079C15.288 0.5 12.4481 1.93575 10.6577 4.36758Z"
                                  fill="#EADEFF"
                                  stroke="#E1D0FF"
                                />
                              </svg>
                            </div>
                            <p
                              class="StyledProps--font StyledProps--main text absolutePos"
                              style="color: rgb(89, 43, 170);"
                            >
                              STEP
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
                >
                  1
                   of 
                  1
                </span>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                      icon="arrow-left"
                    >
                      <svg
                        data-icon="arrow-left"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          arrow-left
                        </desc>
                        <path
                          d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      Prev
                    </span>
                  </button>
                  <button
                    class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      1
                    </span>
                  </button>
                  <button
                    class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      Next
                    </span>
                    <span
                      class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                      icon="arrow-right"
                    >
                      <svg
                        data-icon="arrow-right"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          arrow-right
                        </desc>
                        <path
                          d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <span>
                  Showing 20 per page
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TemplatesPage /> tests snapshot test in list view after toggle 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/undefined/settings"
            >
              <span
                class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                icon="cog"
              >
                <svg
                  data-icon="cog"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cog
                  </desc>
                  <path
                    d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                common.accountSettings
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ng-tooltip-native"
      >
        <h2
          data-tooltip-id="templatesPageHeading"
        >
           
          common.templates
        </h2>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <div
        class="Layout--horizontal StyledProps--main PageSubHeader--container StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <span
            class="bp3-popover-wrapper main"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                  icon="plus"
                >
                  <svg
                    data-icon="plus"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      plus
                    </desc>
                    <path
                      d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  templatesLibrary.addNewTemplate
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <div
            class="bp3-popover-wrapper DropDown--main"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                  data-testid="dropdown-button"
                  style="min-width: 130px;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                      data-testid="dropdown-value"
                      style="--text-line-clamp: 1;"
                    >
                      all
                    </p>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                      data-icon="main-chevron-down"
                    >
                      <svg
                        height="8"
                        viewBox="0 0 14 8"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                          fill="#4d5969"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          style="align-items: center;"
        >
          <div
            class="bp3-input-group ui-search-box ExpandingSearchInput--main expandSearch  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
            data-name=""
            style="width: 200px; max-width: 200px;"
          >
            <span
              class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
              data-icon="thinner-search"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 16 16"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <input
              class="bp3-input  ExpandingSearchInput--filter"
              dir="auto"
              placeholder="search"
              style="padding-right: 38px;"
              type="search"
              value=""
            />
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridUnselected GridListToggle--gridButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
              data-testid="grid-view"
              data-tooltip-id="grid-view"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-grid-view StyledProps--main"
                icon="grid-view"
              >
                <svg
                  data-icon="grid-view"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    grid-view
                  </desc>
                  <path
                    d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              data-testid="list-view"
              data-tooltip-id="list-view"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-list StyledProps--main"
                icon="list"
              >
                <svg
                  data-icon="list"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    list
                  </desc>
                  <path
                    d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
        style="overflow: auto; height: 100%;"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--margin-left-xlarge StyledProps--margin-right-xlarge"
          style="height: 100%;"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-bottom-large StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
              >
                total
                : 
                1
              </p>
              <div
                class="bp3-popover-wrapper DropDown--main"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
                      data-testid="dropdown-button"
                      style="width: 180px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                          data-icon="main-sort"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 18 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M17.125 11.415l-3.713 3.427a.618.618 0 01-.825 0l-3.712-3.427a.51.51 0 010-.761.618.618 0 01.825 0l2.717 2.508V1.538c0-.297.26-.538.583-.538.322 0 .583.241.583.538v11.624l2.717-2.508a.618.618 0 01.825 0 .51.51 0 010 .761zM.875 4.584l3.713-3.426a.618.618 0 01.824 0l3.713 3.426a.51.51 0 010 .762.618.618 0 01-.825 0L5.583 2.838v11.623c0 .298-.26.539-.583.539-.322 0-.583-.241-.583-.539V2.838L1.7 5.346a.618.618 0 01-.825 0 .51.51 0 010-.762z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                          data-testid="dropdown-value"
                          style="--text-line-clamp: 1;"
                        >
                          lastUpdatedSort
                        </p>
                      </div>
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                          data-icon="main-chevron-down"
                        >
                          <svg
                            height="8"
                            viewBox="0 0 14 8"
                            width="8"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                              fill="#4d5969"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
            style="flex-grow: 1;"
          >
            <div
              class="TableV2--table table"
            >
              <div
                class="TableV2--header"
                role="row"
              >
                <div
                  class="TableV2--cell"
                  colspan="1"
                  role="columnheader"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                  >
                    TYPELABEL
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  colspan="1"
                  role="columnheader"
                  style="width: 45%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                  >
                    Template
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  colspan="1"
                  role="columnheader"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                  >
                    VERSION
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  colspan="1"
                  role="columnheader"
                  style="width: 5%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                  >
                    
                  </p>
                </div>
              </div>
              <div
                class="TableV2--body"
              >
                <div
                  class="TableV2--row TableV2--card TableV2--clickable"
                  role="row"
                >
                  <div
                    class="TableV2--cell"
                    role="cell"
                    style="width: 25%;"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main templateColor StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                    >
                      <svg
                        fill="none"
                        height="64"
                        viewBox="0 0 8 64"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.5 63.5L7.5 0.5H5C2.51472 0.5 0.5 2.51472 0.5 5L0.5 59C0.5 61.4853 2.51472 63.5 5 63.5H7.5Z"
                          fill="#EADEFF"
                          stroke="#E1D0FF"
                        />
                      </svg>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                        style="color: rgb(89, 43, 170); letter-spacing: 2px;"
                      >
                        STEP
                      </p>
                    </div>
                  </div>
                  <div
                    class="TableV2--cell"
                    role="cell"
                    style="width: 45%;"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-start"
                    >
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-medium"
                        data-testid="manjutesttemplate"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey800"
                            style="--text-line-clamp: 1;"
                          >
                            manju-test-template-qq-12344
                          </p>
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <div
                                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
                                tabindex="0"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="main-tags"
                                >
                                  <svg
                                    height="15"
                                    viewBox="0 0 14 14"
                                    width="15"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7 0h-.2c-.2 0-.4.1-.6.3l-6 6c-.3.3-.3.8 0 1.1L2 9.1l4.6 4.6c.3.3.8.3 1.1 0l6-6c.2-.1.3-.3.3-.5v-.7-.3-1.3-2c0-.5-.4-1-1-1h-.9V1c0-.5-.4-1-1-1H7zm0 .6h4.2c.2 0 .4.2.4.4v.9h-1.1c-.3-.3-.5-.4-.8-.4s-.4.1-.6.3h-.5c-.2.1-.4.1-.6.3l-6 6s-.1.1-.1.2L.7 6.9c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1c0 .1.1.1.1.1zm1.9 1.8H13c.2 0 .4.2.4.4v4.3s0 .2-.1.2l-6 6c-.1.1-.2.1-.3 0L2.5 8.8c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1zm2.7.9c-.2 0-.5.1-.6.3-.4.4-.4.9 0 1.3s.9.4 1.3 0 .4-.9 0-1.3c-.3-.2-.5-.3-.7-.3zm0 .7c.1 0 .2 0 .2.1.1.1.1.3 0 .4s-.3.1-.4 0-.1-.3 0-.4c0-.1.1-.1.2-.1z"
                                      fill="#4d5969"
                                    />
                                  </svg>
                                </span>
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  5
                                </p>
                              </div>
                            </span>
                          </span>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--font-size-small"
                        >
                          idLabel
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="TableV2--cell"
                    role="cell"
                    style="width: 25%;"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-right-medium"
                    >
                      <p
                        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-semi-bold"
                        style="--text-line-clamp: 1;"
                      >
                        v4
                      </p>
                    </div>
                  </div>
                  <div
                    class="TableV2--cell"
                    role="cell"
                    style="width: 5%;"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                      style="justify-content: flex-end;"
                    >
                      <span
                        class="bp3-popover-wrapper main"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main actionButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                            type="button"
                          >
                            <span
                              class="bp3-icon bp3-icon-more StyledProps--main"
                              icon="more"
                            >
                              <svg
                                data-icon="more"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  more
                                </desc>
                                <path
                                  d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main TableV2--pagination Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
                >
                  1
                   of 
                  1
                </span>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                      icon="arrow-left"
                    >
                      <svg
                        data-icon="arrow-left"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          arrow-left
                        </desc>
                        <path
                          d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      Prev
                    </span>
                  </button>
                  <button
                    class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      1
                    </span>
                  </button>
                  <button
                    class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      Next
                    </span>
                    <span
                      class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                      icon="arrow-right"
                    >
                      <svg
                        data-icon="arrow-right"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          arrow-right
                        </desc>
                        <path
                          d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <span>
                  Showing 20 per page
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
